--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 	</head>
 
 	<body>
-<div class="spinner"></div>
+<!-- <div class="spinner"></div> -->
 <!-- header -->
 <header>
       <div class="container clearfix">
@@ -65,7 +65,7 @@
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
             <div class="nav-collapse nav-collapse_  collapse">
                   <ul class="nav sf-menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="work.html">Services</a></li>
                 <!-- <li class="active"><a href="contact.html">Contact</a></li> -->
               </ul>
