--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
             <div class="nav-collapse nav-collapse_  collapse">
                   <ul class="nav sf-menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li class="active"><a href="work.html">Services</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
               </ul>
