--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
           <div class="span12">
         <div class="navbar navbar_">
               <div class="container">
-            <!-- <h1 class="brand brand_"><a href="index.html"><img alt="" src="img/logo.jpg"> </a></h1> -->
+            <h1 class="brand brand_"><a href="home.html"><img alt="" src="img/logo.jpg"> </a></h1>
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
             <div class="nav-collapse nav-collapse_  collapse">
                   <ul class="nav sf-menu">
@@ -115,24 +115,22 @@
            <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/18.jpg"></a></li> 
            <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/19.jpg"></a></li>
            <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/20.jpg"></a></li>                  
-            </ul> 
-      </div>
-        </div>
-  </div>
+         </ul> 
+          </div>
     </div>
+      </div>
+</div>
 
 <!-- footer -->
 <footer>
-      <div class="container clearfix">
-    <ul class="list-social pull-right">
-          <li><a class="icon-1" href="#"></a></li>
-          <li><a class="icon-2" href="#"></a></li>
-          <li><a class="icon-3" href="#"></a></li>
-          <li><a class="icon-4" href="#"></a></li>
+    <div class="container clearfix">
+        <ul class="list-social pull-right">
+            <li><a class="icon-1" href="https://www.facebook.com/jcentertainmentscom-07272202390724658086-114883968963047/?rc=p"></a></li>
+            <li><a class="icon-3" href="#"></a></li>
         </ul>
-     <div class="privacy pull-left">&copy; 2016 | Designed by <a href="http://justinmezzell.com">Amoke Musa</a></div>
-  </div>
-    </footer>
+        <div class="privacy pull-left">&copy; 2016 | Designed by <a href="https://www.linkedin.com/in/musa-amoke-b3bb0a88?trk=nav_responsive_tab_profile">Amoke Musa</a></div>
+    </div>
+</footer>
 <script type="text/javascript" src="js/bootstrap.js"></script>
-</body>
+    </body>
 </html>
