--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@ jQuery(window).load(function() {
           <div class="span12">
         <div class="navbar navbar_">
               <div class="container">
-            <!-- <h1 class="brand brand_"><a href="index.html"><img alt="" src="img/logo.png"> </a></h1> -->
+            <h1 class="brand brand_"><a href="home.html"><img alt="" src="img/logo.jpg"> </a></h1>
             <a class="btn btn-navbar btn-navbar_" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
             <div class="nav-collapse nav-collapse_  collapse">
                   <ul class="nav sf-menu">
@@ -152,35 +152,35 @@ jQuery(window).load(function() {
             <figure class="img-indent"><img src="img/15.jpg " alt="" /></figure>
             <div class="inner-1 overflow extra">
                   <div class="txt-1">Jc funs $ entertainments is an organization which started in 2011 by <strong>Judge Casmuel & charles kajwang</strong> as a co-founder which is aimed in nurturing & promoting kids' talents at affirmative ages; breaking classrooms boredomness $ monotony; and above all making entertainment less expensive.</div>
-                  WE ARE MOBILE AND WE CAN REACH YOU ANYWHERE
-                </div>
-          </div>
-            </article>
+            </div>
+              </div>
+        </article>
         <article class="span6">
-              <h3>Talk to us</h3>
+            <div align="center">
+                <h3>Reach Us On</h3>
                 <div class="wrapper">
-                <ul class="list list-pad">
-                          <li>Mobile</li>
-                          <li><a href="#">Portraits</a></li>
-                          <li><a href="#">Fashion</a></li>
-                          <li><a href="#">Fine Art</a></li>
-                        </ul>
+                    <ul>
+                        <li>0727220239</li>
+                        <li>0724658086</li>
+                        <li>0704677440</li>
+                    </ul>
+                  WE ARE MOBILE AND WE CAN REACH YOU ANYWHERE
+                    <h5>Thank you our esteemed clients</h5>
                 </div>
-            </article>
-      </div>
-        </div>
-  </div>
+            </div>
+        </article>
+          </div>
     </div>
+      </div>
+</div>
 
 <footer>
       <div class="container clearfix">
     <ul class="list-social pull-right">
-          <li><a class="icon-1" href="#"></a></li>
-          <li><a class="icon-2" href="#"></a></li>
+          <li><a class="icon-1" href="https://www.facebook.com/jcentertainmentscom-07272202390724658086-114883968963047/?rc=p"></a></li>
           <li><a class="icon-3" href="#"></a></li>
-          <li><a class="icon-4" href="#"></a></li>
         </ul>
-    <div class="privacy pull-left">&copy; 2016 | Designed by <a href="http://justinmezzell.com">Amoke Musa</a></div>
+    <div class="privacy pull-left">&copy; 2016 | Designed by <a href="https://www.linkedin.com/in/musa-amoke-b3bb0a88?trk=nav_responsive_tab_profile">Amoke Musa</a></div>
   </div>
     </footer>
 <script type="text/javascript" src="js/bootstrap.js"></script>
