changing Musa to Designs

--- a/work.html
+++ b/work.html
@@ -128,7 +128,7 @@
             <li><a class="icon-1" href="https://www.facebook.com/jcentertainmentscom-07272202390724658086-114883968963047/?rc=p"></a></li>
             <li><a class="icon-3" href="#"></a></li>
         </ul>
-        <div class="privacy pull-left">&copy; 2016 | Designed by <a href="https://www.linkedin.com/in/musa-amoke-b3bb0a88?trk=nav_responsive_tab_profile">Amoke Musa</a></div>
+        <div class="privacy pull-left">&copy; 2016 | Designed by <a href="https://www.linkedin.com/in/musa-amoke-b3bb0a88?trk=nav_responsive_tab_profile">Amoke Designs</a></div>
     </div>
 </footer>
 <script type="text/javascript" src="js/bootstrap.js"></script>
