--- a/home.html
+++ b/home.html
@@ -73,7 +73,6 @@ jQuery(window).load(function() {
           <div class="span12">
         <div class="navbar navbar_">
               <div class="container">
-            <!-- <h1 class="brand brand_"><a href="home.html"><img alt="" src="img/LOGO.png"> </a></h1> -->
             <h1 class="brand brand_"><a href="home.html"><img alt="" src="img/Publication1.png"> </a></h1>
             <a class="btn btn-navbar btn-navbar_" data-toggle="collapse" data-target=".nav-collapse_">Menu <span class="icon-bar"></span> </a>
             <div class="nav-collapse nav-collapse_  collapse">
@@ -181,7 +180,7 @@ jQuery(window).load(function() {
           <li><a class="icon-1" href="https://www.facebook.com/jcentertainmentscom-07272202390724658086-114883968963047/?rc=p"></a></li>
           <li><a class="icon-3" href="#"></a></li>
         </ul>
-    <div class="privacy pull-left">&copy; 2016 | Designed by <a href="https://www.linkedin.com/in/musa-amoke-b3bb0a88?trk=nav_responsive_tab_profile">Amoke Musa</a></div>
+    <div class="privacy pull-left">&copy; 2016 | Designed by <a href="https://www.linkedin.com/in/musa-amoke-b3bb0a88?trk=nav_responsive_tab_profile">Amoke Designs</a></div>
   </div>
     </footer>
 <script type="text/javascript" src="js/bootstrap.js"></script>
