modifying home page

--- a/home.html
+++ b/home.html
@@ -124,14 +124,14 @@ jQuery(window).load(function() {
          </article>
         <div class="clear"></div>
          <ul class="portfolio clearfix">           
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/1.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/2.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/3.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/4.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/5.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/6.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/7.jpg"></a></li> 
-           <li class="box"><a href="img/image-blank.png" class="magnifier" ><img alt="" src="img/work/8.jpg"></a></li>                       
+           <li class="box"><a href="img/1.jpg" class="magnifier" ><img alt="" src="img/work/1.jpg"></a></li> 
+           <li class="box"><a href="img/2.jpg" class="magnifier" ><img alt="" src="img/work/2.jpg"></a></li> 
+           <li class="box"><a href="img/3.jpg" class="magnifier" ><img alt="" src="img/work/3.jpg"></a></li> 
+           <li class="box"><a href="img/4.jpg" class="magnifier" ><img alt="" src="img/work/4.jpg"></a></li> 
+           <li class="box"><a href="img/5.jpg" class="magnifier" ><img alt="" src="img/work/5.jpg"></a></li> 
+           <li class="box"><a href="img/6.jpg" class="magnifier" ><img alt="" src="img/work/6.jpg"></a></li> 
+           <li class="box"><a href="img/7.jpg" class="magnifier" ><img alt="" src="img/work/7.jpg"></a></li> 
+           <li class="box"><a href="img/8.jpg" class="magnifier" ><img alt="" src="img/work/8.jpg"></a></li>                       
          </ul> 
       </div>
      	</div>
